; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20901.c_r2s.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20901.c_r2s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIZE_SZ = common dso_local global i64 0, align 8
@MALLOC_ALIGN_MASK = common dso_local global i64 0, align 8
@MINSIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @r2s(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @SIZE_SZ, align 8
  %6 = load i64, i64* @MALLOC_ALIGN_MASK, align 8
  %7 = add i64 %5, %6
  %8 = add i64 %4, %7
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @MINSIZE, align 8
  %11 = load i64, i64* @MALLOC_ALIGN_MASK, align 8
  %12 = add i64 %10, %11
  %13 = icmp ult i64 %9, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i64, i64* @MINSIZE, align 8
  store i64 %15, i64* %3, align 8
  br label %21

16:                                               ; preds = %1
  %17 = load i64, i64* @MALLOC_ALIGN_MASK, align 8
  %18 = xor i64 %17, -1
  %19 = load i64, i64* %3, align 8
  %20 = and i64 %19, %18
  store i64 %20, i64* %3, align 8
  br label %21

21:                                               ; preds = %16, %14
  %22 = load i64, i64* %3, align 8
  ret i64 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
